--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -1,10 +1,9 @@
 name: Elixir CI
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+  push:
+    branches: [main]
 
 permissions:
   contents: read
